--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,9 @@ matplotlib==3.1.1
 numpy==1.17.5
 Pillow==8.0.1
 scikit-image==0.18.1
-torch==1.5.1+cpu
-torchvision==0.6.1+cpu
+torch==1.5.1
+torchvision==0.6.1
 tqdm==4.51.0
 visdom==0.1.8.9
+pybind11==2.6.2
 
